--- a/index.html
+++ b/index.html
@@ -426,7 +426,77 @@
   <a href="https://t.me/TimeFarmCryptoBot?start=Iz82M8Mgcpej6OCo" class="card">
     <div class="card-header">
       <img src="icons/timecoin.jpg" alt="Card Logo" class="card-logo">
-      <span class="card-name">Time Coin</span>
+      <span class="card-name">Time Farm</span>
+    </div>
+    <div class="card-info">
+<div>Total Players: +100K</div>
+      <div><span class="status-light green"></span><b>Active</b></div>
+    </div>
+  </a>
+  <!-- End of card block -->
+
+
+      <!-- Repeat this block for each card -->
+  <a href="http://t.me/hexn_bot/app?startapp=ce8ca350-2d30-466a-bc88-3d8245914709" class="card">
+    <div class="card-header">
+      <img src="icons/hexen.jpg" alt="Card Logo" class="card-logo">
+      <span class="card-name">Hexen</span>
+    </div>
+    <div class="card-info">
+<div>Total Players: +100K</div>
+      <div><span class="status-light green"></span><b>Active</b></div>
+    </div>
+  </a>
+  <!-- End of card block -->
+
+
+    <!-- Repeat this block for each card -->
+  <a href="https://t.me/Prickgame_bot?start=ref-sSNVbUz568ZEVkXqjQNXoa" class="card">
+    <div class="card-header">
+      <img src="icons/prick.jpg" alt="Card Logo" class="card-logo">
+      <span class="card-name">Prick</span>
+    </div>
+    <div class="card-info">
+<div>Total Players: +100K</div>
+      <div><span class="status-light green"></span><b>Active</b></div>
+    </div>
+  </a>
+  <!-- End of card block -->
+
+
+    <!-- Repeat this block for each card -->
+  <a href="http://t.me/IcebergAppBot?start=referral_6299245973" class="card">
+    <div class="card-header">
+      <img src="icons/iceberg.jpg" alt="Card Logo" class="card-logo">
+      <span class="card-name">IceBerg</span>
+    </div>
+    <div class="card-info">
+<div>Total Players: +100K</div>
+      <div><span class="status-light green"></span><b>Active</b></div>
+    </div>
+  </a>
+  <!-- End of card block -->
+
+
+    <!-- Repeat this block for each card -->
+  <a href="https://t.me/mtkbossbot?start=ref6299245973" class="card">
+    <div class="card-header">
+      <img src="icons/mtk.jpg" alt="Card Logo" class="card-logo">
+      <span class="card-name">MTK Clicker Mafia</span>
+    </div>
+    <div class="card-info">
+<div>Total Players: +100K</div>
+      <div><span class="status-light green"></span><b>Active</b></div>
+    </div>
+  </a>
+  <!-- End of card block -->
+
+
+    <!-- Repeat this block for each card -->
+  <a href="http://t.me/seed_coin_bot/app?startapp=6299245973" class="card">
+    <div class="card-header">
+      <img src="icons/seed.jpg" alt="Card Logo" class="card-logo">
+      <span class="card-name">Seed App</span>
     </div>
     <div class="card-info">
 <div>Total Players: +100K</div>
@@ -717,20 +787,6 @@
 
 
     <!-- Repeat this block for each card -->
-  <a href="http://t.me/seed_coin_bot/app?startapp=6299245973" class="card">
-    <div class="card-header">
-      <img src="icons/seed.jpg" alt="Card Logo" class="card-logo">
-      <span class="card-name">Seed App</span>
-    </div>
-    <div class="card-info">
-<div>Total Players: +100K</div>
-      <div><span class="status-light green"></span><b>Active</b></div>
-    </div>
-  </a>
-  <!-- End of card block -->
-
-
-    <!-- Repeat this block for each card -->
   <a href="https://t.me/cubesonthewater_bot?start=NjI5OTI0NTk3Mw==" class="card">
     <div class="card-header">
       <img src="icons/cubes.jpg" alt="Card Logo" class="card-logo">
@@ -777,20 +833,6 @@
     <div class="card-header">
       <img src="icons/tapcoin.jpg" alt="Card Logo" class="card-logo">
       <span class="card-name">Tapcoin</span>
-    </div>
-    <div class="card-info">
-<div>Total Players: +100K</div>
-      <div><span class="status-light green"></span><b>Active</b></div>
-    </div>
-  </a>
-  <!-- End of card block -->
-
-
-    <!-- Repeat this block for each card -->
-  <a href="http://t.me/IcebergAppBot?start=referral_6299245973" class="card">
-    <div class="card-header">
-      <img src="icons/iceberg.jpg" alt="Card Logo" class="card-logo">
-      <span class="card-name">IceBerg</span>
     </div>
     <div class="card-info">
 <div>Total Players: +100K</div>
@@ -912,18 +954,7 @@
   <!-- End of card block -->
 
 
-    <!-- Repeat this block for each card -->
-  <a href="https://t.me/mtkbossbot?start=ref6299245973" class="card">
-    <div class="card-header">
-      <img src="icons/mtk.jpg" alt="Card Logo" class="card-logo">
-      <span class="card-name">MTK Clicker Mafia</span>
-    </div>
-    <div class="card-info">
-<div>Total Players: +100K</div>
-      <div><span class="status-light green"></span><b>Active</b></div>
-    </div>
-  </a>
-  <!-- End of card block -->
+
 
 
     <!-- Repeat this block for each card -->
@@ -983,20 +1014,6 @@
 
 
     <!-- Repeat this block for each card -->
-  <a href="https://t.me/Prickgame_bot?start=ref-sSNVbUz568ZEVkXqjQNXoa" class="card">
-    <div class="card-header">
-      <img src="icons/prick.jpg" alt="Card Logo" class="card-logo">
-      <span class="card-name">Prick</span>
-    </div>
-    <div class="card-info">
-<div>Total Players: +100K</div>
-      <div><span class="status-light green"></span><b>Active</b></div>
-    </div>
-  </a>
-  <!-- End of card block -->
-
-
-    <!-- Repeat this block for each card -->
   <a href="https://t.me/spell_wallet_bot/wallet?startapp=referral=sei1zxadkpgtnry6w3qkqthclcr9zjrrztcrsyrd4r" class="card">
     <div class="card-header">
       <img src="icons/spell.jpg" alt="Card Logo" class="card-logo">
@@ -1036,22 +1053,6 @@
     </div>
   </a>
   <!-- End of card block -->
-
-
-    <!-- Repeat this block for each card -->
-  <a href="http://t.me/hexn_bot/app?startapp=ce8ca350-2d30-466a-bc88-3d8245914709" class="card">
-    <div class="card-header">
-      <img src="icons/hexen.jpg" alt="Card Logo" class="card-logo">
-      <span class="card-name">Hexen</span>
-    </div>
-    <div class="card-info">
-<div>Total Players: +100K</div>
-      <div><span class="status-light green"></span><b>Active</b></div>
-    </div>
-  </a>
-  <!-- End of card block -->
-
-
 
     <!-- Repeat this block for each card -->
   <a href="https://t.me/DuckTask_bot?start=6299245973" class="card">
