--- a/index.html
+++ b/index.html
@@ -649,7 +649,7 @@
     <!-- Repeat this block for each card -->
   <a href="https://t.me/Shuttle_ton_bot?start=r_6299245973" class="card">
     <div class="card-header">
-      <img src="icons/shttle.jpg" alt="Card Logo" class="card-logo">
+      <img src="icons/shuttle.jpg" alt="Card Logo" class="card-logo">
       <span class="card-name">Shuttle</span>
     </div>
     <div class="card-info">
