--- a/index.html
+++ b/index.html
@@ -109,7 +109,8 @@
 
 
   <!-- Repeat this block for each card -->
-  <a href="https://t.me/memefi_coin_bot?start=r_d2d15532b8" class="card">
+  <a href="https://t.me/memefi_coin_bot?start=r_d2d15532b8" class="card" id="card2">
+        <div class="icon"><img src="trend.svg"></div>
     
     <div class="card-header">
       
@@ -139,7 +140,9 @@
 
 
   <!-- Repeat this block for each card -->
-  <a href="https://t.me/wcoin_tapbot?start=NjI5OTI0NTk3Mw==" class="card">
+  <a href="https://t.me/wcoin_tapbot?start=NjI5OTI0NTk3Mw==" class="card" id="card2">
+        <div class="icon"><img src="trend.svg"></div>
+
     <div class="card-header">
       <img src="icons/wcoin.jpg" alt="Card Logo" class="card-logo">
       <span class="card-name">W-Coin</span>
@@ -153,7 +156,9 @@
 
 
     <!-- Repeat this block for each card -->
-  <a href="http://t.me/BlumCryptoBot/app?startapp=ref_d3XKhi1ipR" class="card">
+  <a href="http://t.me/BlumCryptoBot/app?startapp=ref_d3XKhi1ipR" class="card" id="card2">
+        <div class="icon"><img src="trend.svg"></div>
+
     <div class="card-header">
       <img src="icons/blum.jpg" alt="Card Logo" class="card-logo">
       <span class="card-name">Blum</span>
@@ -167,9 +172,9 @@
 
 
     <!-- Repeat this block for each card -->
-  <a href="https://t.me/pixelversexyzbot?start=6299245973" class="card">
+  <a href="https://t.me/pixelversexyzbot?start=6299245973" class="card" id="card2">
 
-    <div class="icon"><img src="fire.png"></div>
+    <div class="icon"><img src="trend.svg"></div>
     <div class="card-header">
       <img src="icons/pixeltap.jpg" alt="Card Logo" class="card-logo">
       <span class="card-name">PixelTap</span>
@@ -1097,7 +1102,7 @@
 
 
     <!-- Repeat this block for each card -->
-  <a href="https://t.me/timecoinbot?start=1357798" class="card">
+  <a href="https://t.me/timecoinbot?start=1357798" class="card" id="card3">
     <div class="card-header">
       <img src="icons/timecoin.jpg" alt="Card Logo" class="card-logo">
       <span class="card-name">Time Coin</span>
