--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
     <!-- Repeat this block for each card -->
   <a href="https://t.me/TimeFarmCryptoBot?start=Iz82M8Mgcpej6OCo" class="card">
     <div class="card-header">
-      <img src="icons/timecoin.jpg" alt="Card Logo" class="card-logo">
+      <img src="icons/timefarm.jpg" alt="Card Logo" class="card-logo">
       <span class="card-name">Time Farm</span>
     </div>
     <div class="card-info">
@@ -1105,14 +1105,14 @@
 
 
     <!-- Repeat this block for each card -->
-  <a href="https://t.me/timecoinbot?start=1357798" class="card" id="card3">
+  <a href="https://t.me/timecoinbot?start=1357798" class="card">
     <div class="card-header">
       <img src="icons/timecoin.jpg" alt="Card Logo" class="card-logo">
       <span class="card-name">Time Coin</span>
     </div>
     <div class="card-info">
 <div>Total Players: +100K</div>
-      <div><span class="status-light green"></span><b>Active</b></div>
+      <div><span class="status-light gray"></span><b>Pending</b></div>
     </div>
   </a>
   <!-- End of card block -->
