--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
       <span class="card-name">W-Coin</span>
     </div>
     <div class="card-info">
-<div>Total Players: +100K</div>
+<div>Total Players: +10M</div>
       <div><span class="status-light green"></span><b>Active</b></div>
     </div>
   </a>
@@ -167,7 +167,7 @@
       <span class="card-name">Blum</span>
     </div>
     <div class="card-info">
-<div>Total Players: +100K</div>
+<div>Total Players: +20M</div>
       <div><span class="status-light green"></span><b>Active</b></div>
     </div>
   </a>
@@ -183,7 +183,7 @@
       <span class="card-name">PixelTap</span>
     </div>
     <div class="card-info">
-<div>Total Players: +2M</div>
+<div>Total Players: +10M</div>
       <div><span class="status-light green"></span><b>Active</b></div>
     </div>
   </a>
@@ -197,7 +197,7 @@
       <span class="card-name">DotCoin</span>
     </div>
     <div class="card-info">
-<div>Total Players: +12M</div>
+<div>Total Players: +10M</div>
       <div><span class="status-light green"></span><b>Active</b></div>
     </div>
   </a>
@@ -211,7 +211,7 @@
       <span class="card-name">Near HOT</span>
     </div>
     <div class="card-info">
-<div>Total Players: +100K</div>
+<div>Total Players: +10M</div>
       <div><span class="status-light green"></span><b>Active</b></div>
     </div>
   </a>
@@ -225,7 +225,7 @@
       <span class="card-name">CEX IO</span>
     </div>
     <div class="card-info">
-<div>Total Players: +100K</div>
+<div>Total Players: +10M</div>
       <div><span class="status-light green"></span><b>Active</b></div>
     </div>
   </a>
@@ -239,7 +239,7 @@
       <span class="card-name">Gamee</span>
     </div>
     <div class="card-info">
-<div>Total Players: +100K</div>
+<div>Total Players: +1M</div>
       <div><span class="status-light green"></span><b>Active</b></div>
     </div>
   </a>
@@ -253,7 +253,7 @@
       <span class="card-name">Simple Coin</span>
     </div>
     <div class="card-info">
-<div>Total Players: +100K</div>
+<div>Total Players: +500K</div>
       <div><span class="status-light green"></span><b>Active</b></div>
     </div>
   </a>
@@ -267,7 +267,7 @@
       <span class="card-name">Chain Game</span>
     </div>
     <div class="card-info">
-<div>Total Players: +100K</div>
+<div>Total Players: +3M</div>
       <div><span class="status-light green"></span><b>Active</b></div>
     </div>
   </a>
@@ -281,7 +281,7 @@
       <span class="card-name">Pop Luanch</span>
     </div>
     <div class="card-info">
-<div>Total Players: +100K</div>
+<div>Total Players: +500K</div>
       <div><span class="status-light green"></span><b>Active</b></div>
     </div>
   </a>
@@ -295,7 +295,7 @@
       <span class="card-name">Cat Gold Miner</span>
     </div>
     <div class="card-info">
-<div>Total Players: +100K</div>
+<div>Total Players: +2M</div>
       <div><span class="status-light green"></span><b>Active</b></div>
     </div>
   </a>
@@ -309,7 +309,7 @@
       <span class="card-name">The Rocket</span>
     </div>
     <div class="card-info">
-<div>Total Players: +100K</div>
+<div>Total Players: +1M</div>
       <div><span class="status-light green"></span><b>Active</b></div>
     </div>
   </a>
@@ -323,7 +323,7 @@
       <span class="card-name">Tom Clicker</span>
     </div>
     <div class="card-info">
-<div>Total Players: +100K</div>
+<div>Total Players: +200K</div>
       <div><span class="status-light green"></span><b>Active</b></div>
     </div>
   </a>
@@ -337,7 +337,7 @@
       <span class="card-name">BBQ Coin</span>
     </div>
     <div class="card-info">
-<div>Total Players: +100K</div>
+<div>Total Players: +5M</div>
       <div><span class="status-light green"></span><b>Active</b></div>
     </div>
   </a>
@@ -351,7 +351,7 @@
       <span class="card-name">Bull Run</span>
     </div>
     <div class="card-info">
-<div>Total Players: +100K</div>
+<div>Total Players: +3M</div>
       <div><span class="status-light green"></span><b>Active</b></div>
     </div>
   </a>
@@ -366,7 +366,7 @@
       <span class="card-name">Vertus</span>
     </div>
     <div class="card-info">
-<div>Total Players: +100K</div>
+<div>Total Players: +2M</div>
       <div><span class="status-light green"></span><b>Active</b></div>
     </div>
   </a>
@@ -380,7 +380,7 @@
       <span class="card-name">Pocketfi</span>
     </div>
     <div class="card-info">
-<div>Total Players: +100K</div>
+<div>Total Players: +2M</div>
       <div><span class="status-light green"></span><b>Active</b></div>
     </div>
   </a>
@@ -394,7 +394,7 @@
       <span class="card-name">Wormfare Slap</span>
     </div>
     <div class="card-info">
-<div>Total Players: +100K</div>
+<div>Total Players: +1M</div>
       <div><span class="status-light green"></span><b>Active</b></div>
     </div>
   </a>
@@ -423,7 +423,7 @@
       <span class="card-name">Spinner Coin</span>
     </div>
     <div class="card-info">
-<div>Total Players: +100K</div>
+<div>Total Players: +1M</div>
       <div><span class="status-light green"></span><b>Active</b></div>
     </div>
   </a>
@@ -437,7 +437,7 @@
       <span class="card-name">Time Farm</span>
     </div>
     <div class="card-info">
-<div>Total Players: +100K</div>
+<div>Total Players: +2M</div>
       <div><span class="status-light green"></span><b>Active</b></div>
     </div>
   </a>
@@ -448,7 +448,7 @@
   <a href="http://t.me/hexn_bot/app?startapp=ce8ca350-2d30-466a-bc88-3d8245914709" class="card">
     <div class="card-header">
       <img src="icons/hexen.jpg" alt="Card Logo" class="card-logo">
-      <span class="card-name">Hexen</span>
+      <span class="card-name">Hexn Io</span>
     </div>
     <div class="card-info">
 <div>Total Players: +100K</div>
@@ -465,7 +465,7 @@
       <span class="card-name">Prick</span>
     </div>
     <div class="card-info">
-<div>Total Players: +100K</div>
+<div>Total Players: +500K</div>
       <div><span class="status-light green"></span><b>Active</b></div>
     </div>
   </a>
@@ -479,7 +479,7 @@
       <span class="card-name">IceBerg</span>
     </div>
     <div class="card-info">
-<div>Total Players: +100K</div>
+<div>Total Players: +2M</div>
       <div><span class="status-light green"></span><b>Active</b></div>
     </div>
   </a>
@@ -507,7 +507,7 @@
       <span class="card-name">Seed App</span>
     </div>
     <div class="card-info">
-<div>Total Players: +100K</div>
+<div>Total Players: +1M</div>
       <div><span class="status-light green"></span><b>Active</b></div>
     </div>
   </a>
