--- a/index.html
+++ b/index.html
@@ -109,10 +109,9 @@
 
 
   <!-- Repeat this block for each card -->
-  <a href="https://t.me/memefi_coin_bot?start=r_d2d15532b8" class="card" id="card2">
+  <a href="https://t.me/memefi_coin_bot?start=r_d2d15532b8" class="card">
         <div class="icon"><img src="trend.svg"></div>
     
-    <div class="icon"><img src="trend.svg" width="32" height="32"></div>
     <div class="card-header">
       
       <img src="icons/memefi.jpg" alt="Card Logo" class="card-logo">
@@ -261,7 +260,9 @@
 
 
     <!-- Repeat this block for each card -->
-  <a href="https://t.me/onchaincoin_bot?start=user_6299245973" class="card">
+  <a href="https://t.me/onchaincoin_bot?start=user_6299245973" class="card" id="card2">
+
+        <div class="icon"><img src="trend.svg" width="32" height="32"></div>
     <div class="card-header">
       <img src="icons/chaingame.jpg" alt="Card Logo" class="card-logo">
       <span class="card-name">Chain Game</span>
