--- a/index.html
+++ b/index.html
@@ -109,9 +109,10 @@
 
 
   <!-- Repeat this block for each card -->
-  <a href="https://t.me/memefi_coin_bot?start=r_d2d15532b8" class="card">
+  <a href="https://t.me/memefi_coin_bot?start=r_d2d15532b8" class="card" id="card2">
         <div class="icon"><img src="trend.svg"></div>
-    
+
+    <div class="icon"><img src="trend.svg" width="32" height="32"></div>
     <div class="card-header">
       
       <img src="icons/memefi.jpg" alt="Card Logo" class="card-logo">
