--- a/index.html
+++ b/index.html
@@ -1247,7 +1247,18 @@
 
 
 
-
+    <!-- Repeat this block for each card -->
+  <a href="https://t.me/PIGCoinAI_bot/pigcoin?startapp=6299245973" class="card">
+    <div class="card-header">
+      <img src="icons/pigcoin.jpg" alt="Card Logo" class="card-logo">
+      <span class="card-name">Pig Coin</span>
+    </div>
+    <div class="card-info">
+<div>Total Players: +1K</div>
+      <div><span class="status-light green"></span><b>Active</b></div>
+    </div>
+  </a>
+  <!-- End of card block -->
 
 
 
