--- a/index.html
+++ b/index.html
@@ -881,7 +881,9 @@
 
 
     <!-- Repeat this block for each card -->
-  <a href="https://t.me/gemzcoin_bot?start=referral_6299245973" class="card">
+  <a href="https://t.me/gemzcoin_bot?start=referral_6299245973" class="card" id="card2">
+
+    <div class="icon"><img src="trend.svg" width="32" height="32"></div>
     <div class="card-header">
       <img src="icons/gemz.jpg" alt="Card Logo" class="card-logo">
       <span class="card-name">GemzCoin</span>
