--- a/index.html
+++ b/index.html
@@ -889,7 +889,7 @@
       <span class="card-name">GemzCoin</span>
     </div>
     <div class="card-info">
-<div>Total Players: +100K</div>
+<div>Total Players: +1M</div>
       <div><span class="status-light green"></span><b>Active</b></div>
     </div>
   </a>
