--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
 <head>
 
-<meta name="viewport" content="width=device-width, initial-scale=1.0 />
+<!-- <meta name="viewport" content="width=device-width, initial-scale=1.0 />  -->
+<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1">
+
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link rel="stylesheet" type="text/css" href="styles.css" /> 
