--- a/index.html
+++ b/index.html
@@ -1273,6 +1273,52 @@
 
 
 
+  
+    <!-- Repeat this block for each card -->
+  <a href="https://t.me/firecoin_app_bot/app?startapp=r_6299245973" class="card">
+    <div class="card-header">
+      <img src="icons/firecoin.jpg" alt="Card Logo" class="card-logo">
+      <span class="card-name">Fire Coin</span>
+    </div>
+    <div class="card-info">
+<div>Total Players: +1K</div>
+      <div><span class="status-light green"></span><b>Active</b></div>
+    </div>
+  </a>
+  <!-- End of card block -->
+
+
+      <!-- Repeat this block for each card -->
+  <a href="https://t.me/Bcoin2048bot/app?startapp=ref_pCHBBjYCpNlSyJfUcPzTuaEH" class="card">
+    <div class="card-header">
+      <img src="icons/bcoin.jpg" alt="Card Logo" class="card-logo">
+      <span class="card-name">Bcoin</span>
+    </div>
+    <div class="card-info">
+<div>Total Players: +1K</div>
+      <div><span class="status-light green"></span><b>Active</b></div>
+    </div>
+  </a>
+  <!-- End of card block -->
+
+
+
+  
+      <!-- Repeat this block for each card -->
+  <a href="https://t.me/sol_extractor_bot?start=enqoy1" class="card">
+    <div class="card-header">
+      <img src="icons/sol.jpg" alt="Card Logo" class="card-logo">
+      <span class="card-name">Sol Extractor</span>
+    </div>
+    <div class="card-info">
+<div>Total Players: +1K</div>
+      <div><span class="status-light green"></span><b>Active</b></div>
+    </div>
+  </a>
+  <!-- End of card block -->
+
+  
+
 
 
 
