--- a/index.html
+++ b/index.html
@@ -1317,6 +1317,21 @@
   </a>
   <!-- End of card block -->
 
+
+
+        <!-- Repeat this block for each card -->
+  <a href="https://t.me/nikicoin_bot?start=6299245973" class="card">
+    <div class="card-header">
+      <img src="icons/nikicoin.jpg" alt="Card Logo" class="card-logo">
+      <span class="card-name">Niki Coin</span>
+    </div>
+    <div class="card-info">
+<div>Total Players: +1K</div>
+      <div><span class="status-light green"></span><b>Active</b></div>
+    </div>
+  </a>
+  <!-- End of card block -->
+
   
 
 
