--- a/index.html
+++ b/index.html
@@ -298,6 +298,20 @@
     </div>
   </a>
   <!-- End of card block -->
+
+
+      <!-- Repeat this block for each card -->
+  <a href="https://t.me/bunnyAppBot?start=r_6299245973" class="card">
+    <div class="card-header">
+      <img src="icons/bunny.jpg" alt="Card Logo" class="card-logo">
+      <span class="card-name">Bunny App</span>
+    </div>
+    <div class="card-info">
+<div>Total Players: +2M</div>
+      <div><span class="status-light green"></span><b>Active</b></div>
+    </div>
+  </a>
+  <!-- End of card block -->
   
 
 
@@ -365,6 +379,20 @@
     </div>
     <div class="card-info">
 <div>Total Players: +5M</div>
+      <div><span class="status-light green"></span><b>Active</b></div>
+    </div>
+  </a>
+  <!-- End of card block -->
+
+
+      <!-- Repeat this block for each card -->
+  <a href="https://t.me/CyberbaseFarm_bot?start=6299245973" class="card">
+    <div class="card-header">
+      <img src="icons/cybase.jpg" alt="Card Logo" class="card-logo">
+      <span class="card-name">Cybase Farm</span>
+    </div>
+    <div class="card-info">
+<div>Total Players: +3M</div>
       <div><span class="status-light green"></span><b>Active</b></div>
     </div>
   </a>
@@ -738,20 +766,6 @@
 
 
     <!-- Repeat this block for each card -->
-  <a href="https://t.me/bunnyAppBot?start=r_6299245973" class="card">
-    <div class="card-header">
-      <img src="icons/bunny.jpg" alt="Card Logo" class="card-logo">
-      <span class="card-name">Bunny App</span>
-    </div>
-    <div class="card-info">
-<div>Total Players: +100K</div>
-      <div><span class="status-light green"></span><b>Active</b></div>
-    </div>
-  </a>
-  <!-- End of card block -->
-
-
-    <!-- Repeat this block for each card -->
   <a href="https://t.me/EarthcoinApp_bot?start=ref_angrlmu" class="card">
     <div class="card-header">
       <img src="icons/earthcoin.jpg" alt="Card Logo" class="card-logo">
@@ -884,7 +898,7 @@
       <span class="card-name">Coin Crypto</span>
     </div>
     <div class="card-info">
-<div>Total Players: +100K</div>
+<div>Total Players: +300K</div>
       <div><span class="status-light green"></span><b>Active</b></div>
     </div>
   </a>
@@ -928,21 +942,7 @@
       <span class="card-name">Cell Coin</span>
     </div>
     <div class="card-info">
-<div>Total Players: +100K</div>
-      <div><span class="status-light green"></span><b>Active</b></div>
-    </div>
-  </a>
-  <!-- End of card block -->
-
-
-    <!-- Repeat this block for each card -->
-  <a href="https://t.me/CyberbaseFarm_bot?start=6299245973" class="card">
-    <div class="card-header">
-      <img src="icons/cybase.jpg" alt="Card Logo" class="card-logo">
-      <span class="card-name">Cybase Farm</span>
-    </div>
-    <div class="card-info">
-<div>Total Players: +100K</div>
+<div>Total Players: +300K</div>
       <div><span class="status-light green"></span><b>Active</b></div>
     </div>
   </a>
