--- a/index.html
+++ b/index.html
@@ -254,6 +254,20 @@
   <!-- End of card block -->
 
 
+      <!-- Repeat this block for each card -->
+  <a href="https://t.me/pocket_rocket_game_bot?start=e0fec812-c48c-41cc-baaf-472ab792b12c" class="card">
+    <div class="card-header">
+      <img src="icons/pocketrocket.jpg" alt="Card Logo" class="card-logo">
+      <span class="card-name">Pocket Rocket</span>
+    </div>
+    <div class="card-info">
+<div>Total Players: +2M</div>
+      <div><span class="status-light green"></span><b>Active</b></div>
+    </div>
+  </a>
+  <!-- End of card block -->
+
+
 
     <!-- Repeat this block for each card -->
   <a href="https://t.me/Simple_Tap_Bot?start=1715453870454" class="card">
@@ -793,19 +807,6 @@
   </a>
   <!-- End of card block -->
 
-
-    <!-- Repeat this block for each card -->
-  <a href="https://t.me/pocket_rocket_game_bot?start=e0fec812-c48c-41cc-baaf-472ab792b12c" class="card">
-    <div class="card-header">
-      <img src="icons/pocketrocket.jpg" alt="Card Logo" class="card-logo">
-      <span class="card-name">Pocket Rocket</span>
-    </div>
-    <div class="card-info">
-<div>Total Players: +100K</div>
-      <div><span class="status-light green"></span><b>Active</b></div>
-    </div>
-  </a>
-  <!-- End of card block -->
 
 
     <!-- Repeat this block for each card -->
