--- a/index.html
+++ b/index.html
@@ -270,20 +270,6 @@
 
 
     <!-- Repeat this block for each card -->
-  <a href="https://t.me/Simple_Tap_Bot?start=1715453870454" class="card">
-    <div class="card-header">
-      <img src="icons/simpletap.jpg" alt="Card Logo" class="card-logo">
-      <span class="card-name">Simple Coin</span>
-    </div>
-    <div class="card-info">
-<div>Total Players: +500K</div>
-      <div><span class="status-light green"></span><b>Active</b></div>
-    </div>
-  </a>
-  <!-- End of card block -->
-
-
-    <!-- Repeat this block for each card -->
   <a href="https://t.me/onchaincoin_bot?start=user_6299245973" class="card" id="card2">
 
         <div class="icon"><img src="trend.svg" width="32" height="32"></div>
@@ -336,6 +322,51 @@
     </div>
     <div class="card-info">
 <div>Total Players: +1M</div>
+      <div><span class="status-light green"></span><b>Active</b></div>
+    </div>
+  </a>
+  <!-- End of card block -->
+
+
+      <!-- Repeat this block for each card -->
+  <a href="https://t.me/gemzcoin_bot?start=referral_6299245973" class="card" id="card2">
+
+    <div class="icon"><img src="trend.svg" width="32" height="32"></div>
+    <div class="card-header">
+      <img src="icons/gemz.jpg" alt="Card Logo" class="card-logo">
+      <span class="card-name">GemzCoin</span>
+    </div>
+    <div class="card-info">
+<div>Total Players: +1M</div>
+      <div><span class="status-light green"></span><b>Active</b></div>
+    </div>
+  </a>
+  <!-- End of card block -->
+
+
+
+          <!-- Repeat this block for each card -->
+  <a href="https://t.me/nikicoin_bot?start=6299245973" class="card">
+    <div class="card-header">
+      <img src="icons/nikicoin.jpg" alt="Card Logo" class="card-logo">
+      <span class="card-name">Niki Coin</span>
+    </div>
+    <div class="card-info">
+<div>Total Players: +800K</div>
+      <div><span class="status-light green"></span><b>Active</b></div>
+    </div>
+  </a>
+  <!-- End of card block -->
+
+
+      <!-- Repeat this block for each card -->
+  <a href="https://t.me/Simple_Tap_Bot?start=1715453870454" class="card">
+    <div class="card-header">
+      <img src="icons/simpletap.jpg" alt="Card Logo" class="card-logo">
+      <span class="card-name">Simple Coin</span>
+    </div>
+    <div class="card-info">
+<div>Total Players: +500K</div>
       <div><span class="status-light green"></span><b>Active</b></div>
     </div>
   </a>
@@ -921,20 +952,7 @@
   <!-- End of card block -->
 
 
-    <!-- Repeat this block for each card -->
-  <a href="https://t.me/gemzcoin_bot?start=referral_6299245973" class="card" id="card2">
 
-    <div class="icon"><img src="trend.svg" width="32" height="32"></div>
-    <div class="card-header">
-      <img src="icons/gemz.jpg" alt="Card Logo" class="card-logo">
-      <span class="card-name">GemzCoin</span>
-    </div>
-    <div class="card-info">
-<div>Total Players: +1M</div>
-      <div><span class="status-light green"></span><b>Active</b></div>
-    </div>
-  </a>
-  <!-- End of card block -->
 
 
     <!-- Repeat this block for each card -->
@@ -1157,7 +1175,7 @@
     </div>
     <div class="card-info">
 <div>Total Players: +100K</div>
-      <div><span class="status-light green"></span><b>Active</b></div>
+      <div><span class="status-light gray"></span><b>Pending</b></div>
     </div>
   </a>
   <!-- End of card block -->
@@ -1283,7 +1301,7 @@
       <span class="card-name">Pig Coin</span>
     </div>
     <div class="card-info">
-<div>Total Players: +1K</div>
+<div>Total Players: +100K</div>
       <div><span class="status-light green"></span><b>Active</b></div>
     </div>
   </a>
@@ -1298,7 +1316,7 @@
       <span class="card-name">Bcoin</span>
     </div>
     <div class="card-info">
-<div>Total Players: +1K</div>
+<div>Total Players: +100K</div>
       <div><span class="status-light green"></span><b>Active</b></div>
     </div>
   </a>
@@ -1314,7 +1332,7 @@
       <span class="card-name">Sol Extractor</span>
     </div>
     <div class="card-info">
-<div>Total Players: +1K</div>
+<div>Total Players: +100K</div>
       <div><span class="status-light green"></span><b>Active</b></div>
     </div>
   </a>
@@ -1322,22 +1340,9 @@
 
 
 
-        <!-- Repeat this block for each card -->
-  <a href="https://t.me/nikicoin_bot?start=6299245973" class="card">
-    <div class="card-header">
-      <img src="icons/nikicoin.jpg" alt="Card Logo" class="card-logo">
-      <span class="card-name">Niki Coin</span>
-    </div>
-    <div class="card-info">
-<div>Total Players: +800K</div>
-      <div><span class="status-light green"></span><b>Active</b></div>
-    </div>
-  </a>
-  <!-- End of card block -->
+
 
   
-
-
 
 
   
