--- a/index.html
+++ b/index.html
@@ -1440,7 +1440,9 @@ document.addEventListener('contextmenu', event => event.preventDefault());
 
 
 
+  
 
+    // Sort the cards by player count only with js
   function getPlayerCountValue(playerCount) {
   let value = parseFloat(playerCount);
   if (playerCount.includes('M')) {
