--- a/index.html
+++ b/index.html
@@ -34,9 +34,12 @@
 </div>
 
 <div class="search-container" style="text-align: center; position: relative;">
-  <input type="text" class="search-box" placeholder="Search..." oninput="searchCard()" onkeyup="toggleClearButton()">
-  <button onclick="clearSearch()" class="clear-btn">X</button>
+  <div class="input-wrapper">
+    <input type="text" class="search-box" placeholder="Search..." oninput="searchCard()" onkeyup="toggleClearButton()">
+    <span class="clear-btn" onclick="clearSearch()">X</span>
+  </div>
 </div>
+
 
   <div class="card-container" id="card-container"  >
 
@@ -1419,23 +1422,19 @@ document.addEventListener('contextmenu', event => event.preventDefault());
 function toggleClearButton() {
   var input = document.querySelector('.search-box');
   var clearBtn = document.querySelector('.clear-btn');
-  if (input.value.length > 0) {
-    clearBtn.style.display = 'block';
-  } else {
-    clearBtn.style.display = 'none';
-  }
+  
+  // No need to manually show/hide as CSS will take care of it
 }
 
 function clearSearch() {
   var input = document.querySelector('.search-box');
   input.value = '';
   input.focus(); // Keep focus on the search box
-  toggleClearButton(); // Hide the clear button
   searchCard(); // To reset the card display
 }
 
-// Call toggleClearButton on page load in case there's already text in the search box
-document.addEventListener('DOMContentLoaded', toggleClearButton);
+// No need to add event listener for DOMContentLoaded as CSS handles visibility
+
 
 
 
