--- a/index.html
+++ b/index.html
@@ -34,10 +34,7 @@
 </div>
 
 <div class="search-container" style="text-align: center;">
-  <div class="input-container">
-    <input type="text" id="search-box" class="search-box" placeholder="Search..." oninput="searchCard()">
-    <span id="clear-btn" onclick="clearSearch()">×</span>
-  </div>
+  <input type="text" class="search-box" placeholder="Search..." oninput="searchCard()">
 </div>
 
 
