--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <div class="header">
   <a href="https://t.me/cointapz"><img src="logo.png" alt="Logo" class="logo"></a>
-<!-- <div class="back-icon" onclick="history.back()"><img src="back.png" width="24" height="24"></div> -->
+  <div class="back-icon" onclick="history.back()"><img src="back.png" width="24" height="24"></div>
 </div>
 
 <div class="description">
@@ -36,12 +36,10 @@
 <div class="search-container" style="text-align: center;">
   <input type="text" class="search-box" placeholder="Search..." oninput="searchCard()">
 </div>
+<div class="card-container" id="card-container"  >
 
 
-  <div class="card-container" id="card-container"  >
-
-
-  <ul class="nav">
+<ul class="nav">
     <li class="nav-item active" id="showAll">All</li> <!-- New item -->
     <li class="nav-item" id="option2">Trend</li>
     <li class="nav-item" id="option3">Listed</li>
