--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <div class="header">
   <a href="https://t.me/cointapz"><img src="logo.png" alt="Logo" class="logo"></a>
-  <div class="back-icon" onclick="history.back()"><img src="back.png" width="24" height="24"></div>
+<!--  <div class="back-icon" onclick="history.back()"><img src="back.png" width="24" height="24"></div> -->
 </div>
 
 <div class="description">
