--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <div class="header">
   <a href="https://t.me/cointapz"><img src="logo.png" alt="Logo" class="logo"></a>
-<!--  <div class="back-icon" onclick="history.back()"><img src="back.png" width="24" height="24"></div> -->
+<!--  <div class="back-icon" onclick="history.back()"><img src="back.png" width="24" height="24"></div>   -->
 </div>
 
 <div class="description">
@@ -45,11 +45,6 @@
     <li class="nav-item" id="option3">Listed</li>
 
 </ul>
-
-  
-
-
-
 
 
 
@@ -1413,16 +1408,69 @@ document.addEventListener('contextmenu', event => event.preventDefault());
 
 
 
+    const navItems = document.querySelectorAll('.nav-item');
+    const cards = document.querySelectorAll('.card');
 
-
+    navItems.forEach(item => {
+        item.addEventListener('click', () => {
+            if (item.id === 'showAll') {
+                // Show all cards when "Show All" is clicked
+                cards.forEach(card => card.style.display = 'block');
+            } else {
+                // Hide the corresponding card if it's not the active one
+                const cardId = item.id.replace('option', 'card');
+                cards.forEach(card => {
+                    if (card.id === cardId) {
+                        card.style.display = 'block';
+                    } else {
+                        card.style.display = 'none';
+                    }
+                });
+            }
+            // Add 'active' class to the clicked nav item
+            navItems.forEach(nav => nav.classList.remove('active'));
+            item.classList.add('active');
+        });
+    });
   
 
 
 
+  // Sort Cards By Players Count
+function sortCards() {
+  // Get all the card elements into an array
+  var cards = Array.from(document.querySelectorAll('.card'));
+
+  // Function to convert player count string to a number
+  function getPlayerCount(card) {
+    var countText = card.querySelector('.card-info div').textContent;
+    var countValue = parseFloat(countText.replace(/[^\d.]/g, ''));
+    if (countText.includes('M')) {
+      return countValue * 1000000;
+    } else if (countText.includes('K')) {
+      return countValue * 1000;
+    } else {
+      return countValue;
+    }
+  }
+
+  // Sort the cards array by player count
+  cards.sort(function(a, b) {
+    return getPlayerCount(b) - getPlayerCount(a);
+  });
+
+  // Append sorted cards back to the container
+  var container = document.querySelector('.card-container');
+  cards.forEach(function(card) {
+    container.appendChild(card);
+  });
+}
+
+// Call this function after your page has loaded
+sortCards();
 
 
 
-  
 
 
 </script>
