--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
     </div>
     <div class="card-info">
 <div>Total Players: +3M</div>
-      <div><span class="status-light green"></span><b>Active</b></div>
+      <div><span class="status-light gray"></span><b>Pending</b></div>
     </div>
   </a>
   <!-- End of card block -->
