--- a/index.html
+++ b/index.html
@@ -270,9 +270,9 @@
 
 
     <!-- Repeat this block for each card -->
-  <a href="https://t.me/onchaincoin_bot?start=user_6299245973" class="card" id="card2">
+  <a href="https://t.me/onchaincoin_bot?start=user_6299245973" class="card">
 
-        <div class="icon"><img src="trend.svg" width="32" height="32"></div>
+      
     <div class="card-header">
       <img src="icons/chaingame.jpg" alt="Card Logo" class="card-logo">
       <span class="card-name">Chain Game</span>
